[package]
name = "u2f"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
license = "Apache-2.0"

[replace]
"webpki:0.9.2" = {path = "../webpki"}
"untrusted:0.3.2" = {path = "../untrusted"}

[dependencies]
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
futures = "0.1.9"
error-chain = "0.9.0"
bytebuffer = "0.2.0"
enum_primitive = "0.1.1"
hidapi = "0.3"
rand = "0.3.15"
untrusted = "0.3.2"
ring = "0.6.3"
webpki = "0.9.2"
owning_ref = "0.2"
lifeguard = "0.5.2"